--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body {
     color: #212529;
     background-color: #F5F2EA;
     background-clip: padding-box;
-    border: 1px solid #999494;
+    border: 0px;
     box-shadow:  -3px 3px 7px #bdbdbd;
     left: 270px;
     bottom: 140px;
@@ -136,14 +136,15 @@ body {
     width: 90%;
     height: calc(2.25rem + 2px);
     padding: 0.375rem 0.75rem;
-    font-family: inherit;
+     font-family: 'Libre Franklin', sans-serif;
+    --font-sans: 'Libre Franklin';
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
     background-color: #F5F2EA;
     background-clip: padding-box;
-    border: 1px solid #bdbdbd;
+    border: 0;
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -156,22 +157,7 @@ body {
     padding-bottom: 10px;
 }
 
-.add-button {
 
-    width: 97.4%;
-    height: 50px;
-    padding: 0.375rem 0.75rem;
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 400;
-
-    color: #ffffff;
-    background-color: #000000;
-    box-shadow:  -4px 4px 5px #999494;;
-    border: 1px solid #000000;
-    border-radius: 0.3rem;
-
-}
 
 .switch {
     display: inline-block;
@@ -244,5 +230,66 @@ input:checked + .slider:before {
     padding-top: 30px;
 }
 
+
+.keywords__container, .keywords__result {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex
+}
+
+.keywords__result {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 8px 16px;
+    border-radius: 40px;
+    background: #0EA5F1;
+    -webkit-column-gap: 10px;
+    -moz-column-gap: 10px;
+    column-gap: 10px
+}
+
+.keywords__text {
+    font-size: 14px;
+    line-height: 128.571%;
+    color: #fff
+}
+
+.add-button {
+    display: none;
+    margin-left: 10px;
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 150%;
+    -ms-flex-negative: 0;
+    flex-shrink: 0
+}
+
+
+.add-button, .delete-button {
+    color: #0EA5F1;
+    cursor: pointer
+}
+
+.delete-button {
+    font-size: 13px;
+    background: #fff;
+    border-radius: 40px;
+    padding: 5px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    display: -moz-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    text-align: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    line-height: 8px
+}
 
 
